--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "dependencies": {
     "autoprefixer-loader": "^1.2.0",
-    "babel-core": "^5.0.12",
+    "babel-core": "^5.1.11",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.10.1",
     "extract-text-webpack-plugin": "^0.5.0",
@@ -15,8 +15,8 @@
     "source-list-map": "^0.1.4",
     "source-map": "^0.4.2",
     "style-loader": "^0.10.1",
-    "webpack": "~1.7.3",
-    "webpack-dev-server": "^1.8.0"
+    "webpack": "^1.8.9",
+    "webpack-dev-server": "^1.8.2"
   },
   "devDependencies": {},
   "scripts": {
